--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -68,10 +68,44 @@
 
     .hero .centered {
         width: 50%;
-        width: 50%;
-        flex-direction: column;
-        align-content: center;
         justify-content: center;
+        align-content: center;
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .hero .centered a {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-decoration: none;
+    }
+
+    .hero .centered>a:first-of-type {
+        display: block;
+        width: 20%;
+        margin: 1rem auto;
+        padding: 2rem;
+        box-sizing: border-box;
+        background-color: var(--soft-pink);
+        color: var(--clear-color);
+    }
+
+    .hero .centered>a:first-of-type:hover {
+        background-color: var(--dark-mauve);
+    }
+
+    .fa-angle-double-down::before {
+        font-size: 3rem;
+        width: 125px;
+    }
+
+    .fa-angle-double-down:hover {
+        background-color: var(--soft-pink);
+    }
+
+    .hero i {
         margin: auto;
     }
 
@@ -93,16 +127,16 @@
         text-decoration: underline;
     }
 
-    i {
-        height: 60px;
-        width: 60px;
-        display: block;
-        color: #000;
+    .fas.fa-angle-double-down {
         margin: auto;
-        border: 1px solid #000;
+        padding: 3rem;
+        box-sizing: border-box;
+        border: 1px solid var(--pinkish-tan);
         border-radius: 50%;
+        color: var(--dark-mauve);
     }
-    .display-an-example{
+
+    .display-an-example {
         min-height: 100vh;
         width: 100%;
         background-image: url(../img/bg.png);
@@ -110,11 +144,167 @@
         position: absolute;
     }
 
- .forground .title {
-     position: relative; 
-     top: 15rem;
-     left: 5rem;
+    .forground .title {
+        margin-top: 20vh;
+        margin-left: 5rem;
+    }
 
+    .forground h2 {
+        color: var(--pale-pink);
+        display: block;
+        font-size: 4.8rem;
+    }
 
- }
- 
+    .highlight.dark {
+        color: var(--dark-mauve);
+    }
+
+    .highlight.dark:hover {
+        color: var(--pale-pink);
+        text-decoration: underline;
+    }
+
+    h3 {
+        font-size: 1.8rem;
+        color: var(--dark-mauve);
+        line-height: 3;
+    }
+
+    h3 a {
+        color: var(--light-pink);
+    }
+
+    .cards {
+        display: flex;
+        flex-direction: column;
+        margin: 3rem;
+        width: 100%;
+    }
+
+    .card.response {
+        border: 2px solid var(--clear-color);
+        display: flex;
+        flex-direction: column;
+        align-content: flex-end;
+        width: 30%;
+        border-radius: 20px;
+        padding: 2rem;
+        background-color: var(--dark-mauve);
+        color: var(--clear-color);
+        margin: 2rem 0;
+    }
+    .card:hover{
+        background-color: var(--clear-color);
+        color: var(--dark-mauve);
+    }
+
+    .vote {
+        align-self: flex-end;
+        padding: 2rem;
+        box-sizing: border-box;
+    }
+
+    h4 {
+        font-size: 4rem;
+    }
+
+    progress {
+        display: block;
+        /* default: inline-block */
+        width: 90%;
+        margin: .5 rem 1rem;
+        border: 0 none;
+        background: var(--pinkish-tan);
+        border-radius: 14px;
+        box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
+    }
+
+    progress::-moz-progress-bar {
+        border-radius: 12px;
+        background: var(--light-pink);
+    }
+
+    .flex-hero {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 85%;
+        flex-basis: 85%;
+        flex-wrap: nowrap;
+        margin: auto;
+    }
+    .flex-hero aside{
+        width: 25%;
+        flex-basis: 25%;
+    }
+    .flex-hero aside button{
+        background-color: var(--pale-pink);
+        color: var(--dark-mauve);
+        border-radius: 20px;
+        font-size: 2rem;
+        width: 100%;
+        height: 5rem;
+        box-shadow: none;
+    }
+    .flex-hero aside button:hover{
+        background-color: var(--dark-mauve);
+        color: var(--soft-pink);
+    }
+    
+    button {
+        display: inline-block;
+        border: none;
+        padding: 1rem 2rem;
+        margin: 0;
+        text-decoration: none;
+        background: #0069ed;
+        color: #ffffff;
+        font-family: sans-serif;
+        font-size: 1rem;
+        cursor: pointer;
+        text-align: center;
+        transition: background 250ms ease-in-out, 
+                    transform 150ms ease;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+    }
+    
+    button:hover,
+    button:focus {
+        background: #0053ba;
+    }
+    
+    button:focus {
+        outline: 1px solid #fff;
+        outline-offset: -4px;
+    }
+    
+    button:active {
+        transform: scale(0.99);
+    }
+    .number{
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 3rem;
+        background-color: #fff;
+        padding: 1rem;
+        box-sizing: border-box;
+        border-radius: 20px;
+        border: 3px solid var(--dark-mauve);
+        margin-bottom: 3rem;
+    }
+    .social-links{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-evenly;
+
+        font-size: 5rem;
+
+    }
+    .social-links a{
+        color: var(--clear-color);
+        margin: 0 15px ;
+    }
+
